cloud-infra-macros/tests/fails/env_var_key_starts_with_underscore.rs
use cloud_infra_macros::env_var_key;

fn example() {
    let key = env_var_key!("_INVALID");
}

fn main() {}